added new schema dependency, added schema json files, updated controller tests to verify outputted json matches the schema